Migrate from Java 14 preview.