@@ -33,24 +33,4 @@ test {
 
 application {
     mainClassName = 'com.github.emcat.Emcat'
-    applicationDefaultJvmArgs = ["--enable-preview"]
-}
-
-run{
-    standardInput = System.in
-}
-
-sourceCompatibility = 14
-targetCompatibility = 14
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
 }
